# GeomOpter

./: .gitignore  Cargo.toml  README.md
benchmark/car_opt/: assert.py
benchmark/car_opt/cholestane/: cholestane.ctrl
benchmark/car_opt/ethane/: ethane.ctrl  ethane.out2
benchmark/car_opt/isobutane/: gen_ctrl.sh  isobutane.ctrl  isobutane.out2
benchmark/car_opt/methane/: methane.ctrl  methane.mol2  methane.out2
benchmark/car_opt/methylcyclohexane/: methylcyclohexane.ctrl  methylcyclohexane.out2
benchmark/car_opt/nbutane/: nbutane.ctrl  nbutane.out2
benchmark/car_opt/pinane/: pinane.ctrl  pinane.out2
benchmark/energy/: assert.py  gen_ctrl.sh
benchmark/energy/cholestane/: cholestane.ctrl  cholestane.out1
benchmark/energy/ethane/: ethane.ctrl  ethane.out1
benchmark/energy/isobutane/: isobutane.ctrl  isobutane.out1
benchmark/energy/methane/: methane.ctrl  methane.out1
benchmark/energy/methylcyclohexane/: methylcyclohexane.ctrl  methylcyclohexane.mol2
benchmark/examples/: ethane.mol2  isobutane.mol2  tiny.parameters
benchmark/intl_opt/: assert.py  gen_ctrl.sh  run_ctrl.sh
config/: ctrl.toml  log4rs.yaml
examples/: cholestane.mol2  nbutane.mol2
examples/ref/: ethane.out3  ethane.out3b  isobutane.out3  methane.out3b  methylcyclohexane.out1
src/: build.rs  main.rs
src/data/: mod.rs
src/geom/: angle.rs  bond.rs  coord.rs  dihedral.rs  mod.rs
src/grad/: mod.rs
src/io/: mod.rs
src/matrix/: mat_blas_lapack.rs  mod.rs
src/mol/: mod.rs
src/opt/: mod.rs  opt_car.rs  opt_intl.rs
src/utils/: constant.rs  mod.rs
(+15 files in other folders)
