[package]
name = "GeomOpter"
version = "0.1.0"
edition = "2021"
author = ["Tianyi Gao <tianyi.gao@univ-tlse3.fr>"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forward_ref = "1.0.0"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
log4rs = "1.3.0"
blas-sys = "0.7"
blas = "0.22"
lapack-sys = "0.14"
lapack = "0.19"